2004-10-09  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/style.hg: Add create() method, as per bug #148012.

2004-10-09  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/comboboxentry.hg: Added get_entry(), as per bug #142758.

2004-09-04 Jonathan Brandmeyer <jbrandmeyer@earthlink.net>
 
 	* gdk/src/screen.hg: get_default(): Take an extra reference so that
 	the Screen is not deleted too early.

2004-09-17  Murray Cumming  <murrayc@murrayc.com>

	* iconview.hg: Added overrides of set_text_column(), and 
	set_pixbuf_column() that take ModelColumns instead of ints.
	Wrapped signals. Added foreach()
	* cellview.hg: Make get_size_of_row() const.
	* tools/extra_defs_gen/gtk_extra_defs_gen: Added new types.
	* gtk/src/gtk_signals.defs: Regenerated (making the usual corrections 
	for Event* and gpointer parameters.
	* combobox.[hg|ccg], treeview.[hg|ccg]: Add set_row_separator_func(), 
	with common implementation in treeview-private.[h|cc].
	* range.hg: Wrapped change_value signal.
	* demos/gtk-demo/: Added example_iconview.cc, which demonstrates  the 
	IconView and is a C++ version of the C original..

2.5.0:
	
2004-09-12  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/: Added cellview.[hg|ccg].

2004-09-10  Murray Cumming  <murrayc@murrayc.com>

	* pango/src/layout: Added set_ellipsize(), get_ellipsize(), and 
	EllipsizeMode enum.
	* pango/src/pango_enums.defs: Regenerated.
	* pango/src/pango_methods.defs: Regenerated.
	* gtk/src/: Added iconview.[hg|ccg|, filechooserbutton.[hg|ccg].
	* gtk/src/entry.hg: Added layout_index_to_text_index() and 
	text_index_to_layout_index()
	* gtk/src/entrycompletion.hg: Added insert_prefix(), 
	set_inline_completion(), get_inline_completion(), 
	set_popup_completion(), get_popup_completion(), get_text_column()
	* gtk/src/combobox.hg: Added get_wrap_width(), get_row_span_column(),
	get_column_span_column(), get_add_tearoffs(), set_add_tearoffs(), 
	get_focus_on_click(), set_focus_on_click(), get_popup_accessible().