@@ -64,12 +64,12 @@
           </td>
           <td valign="Top" height="75">
            <ul>
-            <li><a href="http://cvs.gnome.org/lxr/source/gtkmm/CHANGES">What's new in gtkmm 2.4</a></li>
+            <li><a href="http://cvs.gnome.org/viewcvs/*checkout*/gtkmm/CHANGES?rev=1.5">What's new in gtkmm 2.4</a></li>
             <li><a
-            href="http://cvs.gnome.org/lxr/source/gtkmm-root/base/PORTING">Porting from gtkmm 1.2.x to gtkmm 2.0.x</a></li>
-            <li><a href="http://cvs.gnome.org/lxr/source/gnomemm/PORTING">Porting from gnomemm 1.2.x to gnomemm 2.0.x</a></li>
-            <li><a href="http://cvs.gnome.org/lxr/source/gtkmm/NEWS">News</a></li>
-            <li><a href="http://cvs.gnome.org/lxr/source/gtkmm/ChangeLog">ChangeLog</a></li>
+            href="http://cvs.gnome.org/viewcvs/*checkout*/gtkmm-root/base/PORTING">Porting from gtkmm 1.2.x to gtkmm 2.0.x</a></li>
+            <li><a href="http://cvs.gnome.org/viewcvs/*checkout*/gnomemm/PORTING">Porting from gnomemm 1.2.x to gnomemm 2.0.x</a></li>
+            <li><a href="http://cvs.gnome.org/viewcvs/*checkout*/gtkmm/NEWS">News</a></li>
+            <li><a href="http://cvs.gnome.org/viewcvs/*checkout*/gtkmm/ChangeLog">ChangeLog</a></li>
            </ul>
           </td>
          </tr>
@@ -260,9 +260,9 @@
 
               <td valign="Top" height="75">
                <ul>
-                <li><a href="http://cvs.gnome.org/lxr/source/gtkmm/README.SUN">Solaris, with Sun's Forte C++.</a></li>
-                <li><a href="http://cvs.gnome.org/lxr/source/gtkmm/README.win32">Windows, with mingw and cygwin</a></li>
-                <li><a href="http://cvs.gnome.org/lxr/source/gtkmm/MSVC_Net2003/README">Windows, with MSVC++</a></li>
+                <li><a href="http://cvs.gnome.org/viewcvs/*checkout*/gtkmm/README.SUN">Solaris, with Sun's Forte C++.</a></li>
+                <li><a href="http://cvs.gnome.org/viewcvs/*checkout*/gtkmm/README.win32">Windows, with mingw and cygwin</a></li>
+                <li><a href="http://cvs.gnome.org/viewcvs/*checkout*/gtkmm/MSVC_Net2003/README">Windows, with MSVC++</a></li>
               </ul> 
               </td>
              
