@@ -1,5 +1,10 @@
 2004-10-09  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/index.html: Changed cvs links to viewcvs, because lxr and 
+	bonsai are still broken.
+
+2004-10-09  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/src/style.hg: Add create() method, as per bug #148012.
 
 2004-10-09  Murray Cumming  <murrayc@murrayc.com>
